creation fichier js pour frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,3 +12,10 @@
     }
   </style>
 </head>
+<body>
+  <h1>Pixel War</h1>
+  <div id="board"></div>
+  <input type="color" id="colorPicker" value="#000000">
+</body>
+</html>
+<script src="/static/app.js"></script>
